--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,1 +1,26 @@
 
+server:
+    port: 8083              # www 80, api-gateway 8080, and others take diff. ports
+    shutdown: graceful
+
+spring:
+  h2:                     # db
+    console:
+      enabled: true
+      path: /h2             # localhost:8083/h2
+      settings:
+        trace: false
+        web-allow-others: true    
+  datasource:            # datasource
+    url: jdbc:h2:mem:customers
+    platform: h2
+    username: sa
+    password:
+    driverClassName: org.h2.Driver
+  jpa:                   # jpa
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  lifecycle:
+    timeout-per-shutdown-phase: 20s        # gracefull shutdown
